# PraxisDoktor

./: .gitignore  .udd  ANLEITUNG.txt  LICENSE  PatientenGesprächTest.opus  README.md  _HANDOFF.md  build.py  db.py  dev.sh  diarize.py  installer_gui.py  launcher.py  llm.py  main.py  ocr.py  pyproject.toml
demo/: generate_anamnesebogen.py
docs/: billing_rules.md  it_briefing_template.md  process_ontology.md  processes_observed.md  regulatory_landscape.md  remote_access.md  roles_and_processes.md  skeleton_plan.md  stack.md  transcript_2026-04-26.md
installer/: PraxisDoktor.iss  README.md
public/: .env  .env.example  README.md  package.json  svelte.config.js  (+2 more)
server/: .env.example  .gitignore  alembic.ini  pyproject.toml  seed.py
server/alembic/: env.py
server/alembic/versions/: e471bc936374_add_jobs_and_process_seen_tables.py  fdd94455f7d9_initial_schema.py
server/app/: auth.py  config.py  db.py  jobs.py  main.py  sync.py  ws.py
server/app/billing_rules/: __init__.py  engine.py  rules_ebm.py  rules_goae.py  rules_universal.py
server/app/intake/: health.py  llm.py  pipeline.py  transcribe.py  vocab.py  vocab_default.json
server/app/medical_office/: __init__.py  adapter.py  coherence.py  mariadb.py  mock.py  schema.py
server/app/models/: __init__.py  chat.py  job.py  process.py  seen.py  transition.py  user.py
server/app/processes/: __init__.py  patient_intake.py  patientenakte.py  placeholders.py  registry.py
server/app/routers/: admin.py  auth.py  chat.py  dashboard.py  intake.py  patientenakte.py  processes.py  public.py  rechnungspruefung.py
(+58 files in other folders)
