[project]
name = "praxisdoktor"
version = "1.0.0"
description = "New patient registration assistant for urology practice"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "faster-whisper",
    "easyocr",
    "httpx",
    "aiofiles",
    "python-multipart",
    "speechbrain",
    "scikit-learn",
    "torchaudio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
